<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/start_distance"
        android:layout_marginTop="90dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/distance"
        android:autofillHints="@string/distance"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/start_time"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_time"
        android:autofillHints="@string/exercise_time"
        android:inputType="time"/>

    <EditText
        android:id="@+id/start_margin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/margin_set"
        android:autofillHints="@string/margin_set"
        android:inputType="number"/>

    <Button
        android:id="@+id/start_generate"
        android:layout_width="150dp"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:text="@string/generate"/>

</LinearLayout>